# MandanGPT

./: .gitignore  Dockerfile  Privacy.md  Readme.md  Terms_Of_Service.md  api.Dockerfile  bot.Dockerfile  bot.py  config.json  devcontainer.json  docker-compose.yml  example.env  fastapi.Dockerfile  index.html  main.py  milvus-compose.yml  milvus.yaml  pyproject.toml  requirements.txt  server.py
app/: main.py
assets/js/: dark_mode.js
assets/markdown/: Privacy.md
cogs/: admin.py  ai.py  chabot.py  error_handler.py  general.py  nlp.py  user_greeting.py
mcp_utils/: __init__.py
static/css/: discord.css  index.css
static/data/: commands.json
static/js/: dark_mode.js  index.js  oauth.js
static/templates/: commands.html  darkmode.html  features.html  footer.html  head.html  index.html  ingest.html  oauth.html  upload.html
utils/: __init__.py  config.py  constants.py  conversation_memory.py  exceptions.py  llm.py  llm_core.py  llm_embeddings.py  mistral_llama_interface.py  models.py  ollama_interface.py  summarize.py
utils/command_utils/: __init__.py  random_fox.py  stoic_quote.py
utils/discord_utils/: __init__.py  activity_switcher.py  color.py  embed_creator.py  help_command.py  ui_kit_elements.py
utils/langchain_utils/: __init__.py  llm_core.py  runnable_parser.py  summarize.py
utils/langchain_utils/data_ingestion_utils/: dynamic_document_loader.py
utils/langgraph_utils/: graph.py
utils/models/: __init__.py  discord.py  fastapi.py  langcahin.py  langchain.py  llm.py
utils/observability_utils/: __init__.py  langfuse_integration.py
(+10 files in other folders)
